--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -7,24 +7,13 @@
         android:padding="16dp"
         android:layout_gravity="center_horizontal">
 
-    <TextView
-            android:id="@+id/btTextView"
-            android:text="Some text"
-            android:textSize="25dp"
-            android:gravity="center_horizontal"
+    <ImageButton
+            android:id="@+id/imageButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    <Button
-            android:id="@+id/btButtonText"
-            android:text="Set text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    <Button
-            android:id="@+id/btButtonClose"
-            android:text="Close sheet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="360dp"
+            android:src="@drawable/icons_nfc"
+            android:layout_gravity="center_horizontal"
+            android:scaleX="2"
+            android:scaleY="2"/>
 
 </LinearLayout>
